--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -4,6 +4,7 @@ branches:
 # TODO: Remove; Might be useful to have some debug when attempting the first releases
 debug: true
 plugins:
-  - "@semantic-release/commit-analyzer"
+  - - "@semantic-release/commit-analyzer"
+    - preset: conventionalcommits
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/github"
