--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -6,5 +6,6 @@ debug: true
 plugins:
   - - "@semantic-release/commit-analyzer"
     - preset: conventionalcommits
+  - conventional-changelog-conventionalcommits
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/github"
