test release rules

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -6,6 +6,10 @@ debug: true
 plugins:
   - - "@semantic-release/commit-analyzer"
     - preset: conventionalcommits
+      releaseRules:
+        - type: chore
+          scope: deps
+          release: minor
   - - "@semantic-release/release-notes-generator"
     - preset: conventionalcommits
   - "@semantic-release/github"
