--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -14,6 +14,10 @@ plugins:
     - preset: conventionalcommits
       presetConfig:
         types:
+          - type: feat
+            section: Features
+          - type: fix
+            section: Bug Fixes
           - type: chore
             scope: deps
             section: Dependencies
