ci: configure conventionalcommits (#4)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,7 @@ jobs:
       - uses: cycjimmy/semantic-release-action@8f6ceb9d5aae5578b1dcda6af00008235204e7fa # v3.2.0
         with:
           dry_run: true
+          extra_plugins: |
+            conventional-changelog-conventionalcommits
         env:
           GITHUB_TOKEN: ${{ secrets.STAS_RELEASE_TOKEN }}
