--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,4 +35,4 @@ jobs:
         if: steps.semantic-release.outputs.new_release_published == 'true'
         with:
           token: ${{ secrets.STAS_RELEASE_TOKEN }}
-          title: "chore(release): Release version ${{ steps.semantic-release.outputs.new_release_version }}"
+          title: "chore(release): ${{ steps.semantic-release.outputs.new_release_version }}"
