--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,6 +14,7 @@ jobs:
           changelog-types: >
             [
               { "type": "build", "section": "Build System", "hidden": false },
+              { "type": "build", "scope": "deps", "section": "Dependency Updates", "hidden": false },
               { "type": "ci", "section": "Continuous Integration", "hidden": false },
               { "type": "chore", "section": "Miscellaneous Chores", "hidden": false },
               { "type": "docs", "section": "Documentation", "hidden": false },
