--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,17 +13,6 @@ jobs:
           bump-minor-pre-major: true
           changelog-types: >
             [
-              { "type": "build", "section": "Build System", "hidden": false },
-              { "type": "build", "scope": "deps", "section": "Dependency Updates", "hidden": false },
-              { "type": "ci", "section": "Continuous Integration", "hidden": false },
-              { "type": "chore", "section": "Miscellaneous Chores", "hidden": false },
-              { "type": "docs", "section": "Documentation", "hidden": false },
-              { "type": "feat", "section": "Features", "hidden": false },
-              { "type": "fix", "section": "Bug Fixes", "hidden": false },
-              { "type": "perf", "section": "Performance Improvements", "hidden": false },
-              { "type": "revert", "section": "Reverts", "hidden": false },
-              { "type": "refactor", "section": "Code Refactoring", "hidden": false },
-              { "type": "style", "section": "Styles", "hidden": false },
-              { "type": "test", "section": "Tests", "hidden": false }
+              { "type": "build", "scope": "deps", "section": "Dependency Updates", "hidden": false }
             ]
           release-type: go
