--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,4 +17,6 @@ jobs:
               { "type": "fix", "section": "Bug Fixes" },
               { "type": "build", "scope": "deps", "section": "Dependency Updates" }
             ]
+          extra-files: |
+            kustomization.yaml
           release-type: go
